--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -4,6 +4,8 @@ $color-grey-light-primary: #f8f8f8;
 $color-yellow-secondary: #ffe302;
 $color-grey-light-secondary: #d0cfcf;
 $color-grey-medium-secondary: #b4b4b4;
+$color-grey-dark-secondary: #a3a5b7;
+$color-dark-blue-secondary: rgb(5, 15, 52);
 $color-white: #fff;
 $color-black: #000;
 $color-red-error: #cb3d40;
