--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -96,6 +96,102 @@ sg-replace-icons input[type="radio"]:checked + label:before,
 .tooltip {
   display: inline-block;
 }
+//modal
+.section-modal {
+  height: 100%;
+  width: 100vw;
+  background-color: rgb(0, 0, 0, 0.7);
+  z-index: 100000000000000000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  .modal-container {
+    width: 360px;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid $color-grey-medium-secondary;
+    border-radius: 5px;
+    background-color: $color-white;
+    .modal-text-success {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 5rem 0;
+      svg {
+        width: 70px;
+        height: 70px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      text-align: center;
+      font-weight: bold;
+      font-size: 1.4rem;
+    }
+    .modal-title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 2rem 1rem;
+      p {
+        font-size: 1.4rem;
+        font-weight: bold;
+      }
+      .modal-close {
+        width: 25px;
+        height: 25px;
+        border: none;
+        background-color: rgb(0, 0, 0, 0);
+        .button-close {
+          @include button;
+          background-image: url(../img/cancel.svg);
+        }
+      }
+    }
+    .modal-text {
+      border-top: 1px solid $color-grey-medium-secondary;
+      border-bottom: 1px solid $color-grey-medium-secondary;
+      padding: 2rem 1rem;
+      p {
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+      span {
+        font-size: 1rem;
+        color: $color-grey-medium-secondary;
+      }
+    }
+    .modal-control-button {
+      padding: 1rem;
+      display: flex;
+      gap: 2rem;
+      justify-content: flex-end;
+      button {
+        padding: 0.6rem;
+        color: $color-white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        &:hover {
+          background-color: $color-grey-medium-secondary;
+        }
+      }
+      .modal-control-button-save {
+        background-color: $color-blue-primary;
+        &:hover {
+          background-color: rgb(0, 189, 211, 0.7);
+        }
+      }
+      .modal-control-button-cancel {
+        background-color: rgb(0, 0, 0, 0.7);
+      }
+    }
+  }
+}
 
 .tooltip .tooltiptext {
   @include font-nunito-regular;
