--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,4 @@
-$color-blue-primary: #00bdd3;
+$color-blue-primary: rgb(0, 189, 211);
 $clor-yellow-primary: #f4e041;
 $color-grey-light-primary: #f8f8f8;
 $color-yellow-secondary: #ffe302;
