--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -192,7 +192,33 @@ sg-replace-icons input[type="radio"]:checked + label:before,
     }
   }
 }
+// spinner
+.spinner-container {
+  padding: 5rem 1rem 1rem 1rem;
+  text-align: center;
+}
+.spinner {
+  color: rgb(229, 231, 235);
+  height: 50px;
+  width: 50px;
+  fill: #1c64f2;
+}
 
+// Animation Spin
+.animation-spin {
+  -webkit-animation: spin 2s infinite linear;
+  animation: spin 1s infinite linear;
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
 .tooltip .tooltiptext {
   @include font-nunito-regular;
   @include text-p;
@@ -423,7 +449,7 @@ input[type="file"]::file-selector-button {
       background-position: center;
       color: $color-white;
       .content {
-        max-width: 45rem;
+        max-width: 47rem;
         text-align: center;
         display: flex;
         flex-direction: column;
