--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -455,6 +455,7 @@ input[type="file"]::file-selector-button {
         flex-direction: column;
         align-items: center;
         gap: 3rem;
+        transform: translateX(-400%);
         @media screen and (max-width: 360px) {
           padding-left: 2rem;
           padding-right: 2rem;
