--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -192,6 +192,28 @@ sg-replace-icons input[type="radio"]:checked + label:before,
     }
   }
 }
+//scroll button
+.scroll-button {
+  width: 3.5rem;
+  height: 3.5rem;
+  position: fixed;
+  outline-offset: 0;
+  border-width: 0;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background-color: rgba(55, 48, 48, 0.6);
+  background-image: url(../img/scrolltopicon.svg);
+  background-size: 100%;
+  background-position: center;
+  cursor: pointer;
+  @media screen and (max-width: 1200px) {
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(55, 48, 48, 0.9);
+  }
+}
 // spinner
 .spinner-container {
   padding: 5rem 1rem 1rem 1rem;
